feat(Testbench): :sparkles: Gerar valores exatos
Foi implementado a lógica que gera 4096 resultados exatos (bom grau de precisão). Os resultados são armazenados em arquivo .txt

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
+*.bak
 synthesis/db/
-synthesis/incremental_db/compiled_partitions/
+synthesis/incremental_db/
+synthesis/output_files/
+synthesis/simulation/modelsim/rtl_work/
+synthesis/simulation/modelsim/work/
