--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,87 @@ incremental_db/
 db/
 _output_files/
 PLLJ_PLLSPE_INFO.txt
+synthesis/db/prev_cmp_sigmoid_taylor.qmsg
+synthesis/db/sigmoid_taylor.asm.qmsg
+synthesis/db/sigmoid_taylor.asm.rdb
+synthesis/db/sigmoid_taylor.cmp.idb
+synthesis/db/sigmoid_taylor.cmp.rdb
+synthesis/db/sigmoid_taylor.db_info
+synthesis/db/sigmoid_taylor.eda.qmsg
+synthesis/db/sigmoid_taylor.fit.qmsg
+synthesis/db/sigmoid_taylor.hier_info
+synthesis/db/sigmoid_taylor.map.bpm
+synthesis/db/sigmoid_taylor.map.cdb
+synthesis/db/sigmoid_taylor.map.hdb
+synthesis/db/sigmoid_taylor.map.kpt
+synthesis/db/sigmoid_taylor.map.qmsg
+synthesis/db/sigmoid_taylor.map.rdb
+synthesis/db/sigmoid_taylor.map_bb.cdb
+synthesis/db/sigmoid_taylor.map_bb.hdb
+synthesis/db/sigmoid_taylor.npp.qmsg
+synthesis/db/sigmoid_taylor.pre_map.hdb
+synthesis/output_files/sigmoid_taylor.pin
+synthesis/output_files/sigmoid_taylor.map.summary
+synthesis/output_files/sigmoid_taylor.map.rpt
+synthesis/output_files/sigmoid_taylor.flow.rpt
+synthesis/output_files/sigmoid_taylor.fit.summary
+synthesis/output_files/sigmoid_taylor.fit.rpt
+synthesis/output_files/sigmoid_taylor.eda.rpt
+synthesis/output_files/sigmoid_taylor.done
+synthesis/output_files/sigmoid_taylor.asm.rpt
+synthesis/incremental_db/compiled_partitions/sigmoid_taylor.rrp.hdb
+synthesis/incremental_db/compiled_partitions/sigmoid_taylor.root_partition.map.kpt
+synthesis/incremental_db/compiled_partitions/sigmoid_taylor.root_partition.map.hdb
+synthesis/incremental_db/compiled_partitions/sigmoid_taylor.root_partition.map.hbdb.hdb
+synthesis/incremental_db/compiled_partitions/sigmoid_taylor.root_partition.map.hbdb.cdb
+synthesis/incremental_db/compiled_partitions/sigmoid_taylor.root_partition.map.cdb
+synthesis/incremental_db/compiled_partitions/sigmoid_taylor.root_partition.cmp.rcfdb
+synthesis/incremental_db/compiled_partitions/sigmoid_taylor.root_partition.cmp.hdb
+synthesis/incremental_db/compiled_partitions/sigmoid_taylor.root_partition.cmp.cdb
+synthesis/incremental_db/compiled_partitions/sigmoid_taylor.root_partition.cmp.ammdb
+synthesis/db/sigmoid_taylor.vpr.ammdb
+synthesis/db/sigmoid_taylor.tmw_info
+synthesis/db/sigmoid_taylor.tiscmp.slow_1200mv_85c.ddb
+synthesis/db/sigmoid_taylor.tiscmp.slow_1200mv_0c.ddb
+synthesis/db/sigmoid_taylor.tiscmp.fast_1200mv_0c.ddb
+synthesis/db/sigmoid_taylor.tis_db_list.ddb
+synthesis/db/sigmoid_taylor.sta.rdb
+synthesis/db/sigmoid_taylor.sta.qmsg
+synthesis/db/sigmoid_taylor.smart_action.txt
+synthesis/db/sigmoid_taylor.sgate.nvd
+synthesis/db/sigmoid_taylor.rtlv_sg.cdb
+synthesis/db/sigmoid_taylor.rtlv.hdb
+synthesis/db/sigmoid_taylor.routing.rdb
+synthesis/db/sigmoid_taylor.root_partition.map.reg_db.cdb
+synthesis/db/sigmoid_taylor.pre_map.hdb
+synthesis/db/sigmoid_taylor.npp.qmsg
+synthesis/db/sigmoid_taylor.map_bb.hdb
+synthesis/db/sigmoid_taylor.map_bb.cdb
+synthesis/db/sigmoid_taylor.map.rdb
+synthesis/db/sigmoid_taylor.map.qmsg
+synthesis/db/sigmoid_taylor.map.kpt
+synthesis/db/sigmoid_taylor.map.hdb
+synthesis/db/sigmoid_taylor.map.cdb
+synthesis/db/sigmoid_taylor.map.bpm
+synthesis/db/sigmoid_taylor.hier_info
+synthesis/db/sigmoid_taylor.fit.qmsg
+synthesis/db/sigmoid_taylor.eda.qmsg
+synthesis/db/sigmoid_taylor.db_info
+synthesis/db/sigmoid_taylor.cmp.rdb
+synthesis/db/sigmoid_taylor.cmp.idb
+synthesis/db/sigmoid_taylor.asm.rdb
+synthesis/db/sigmoid_taylor.asm.qmsg
+synthesis/db/prev_cmp_sigmoid_taylor.qmsg
+synthesis/output_files/sigmoid_taylor.sta.rpt
+synthesis/output_files/sigmoid_taylor.sta.summary
+synthesis/simulation/modelsim/msim_transcript
+synthesis/simulation/modelsim/rtl_work/_info
+synthesis/simulation/modelsim/rtl_work/_lib.qdb
+synthesis/simulation/modelsim/rtl_work/_lib1_0.qtl
+synthesis/simulation/modelsim/sigmoid_taylor.svo
+synthesis/simulation/modelsim/sigmoid_taylor_modelsim.xrf
+synthesis/simulation/modelsim/taylor_sigmoid.cr.mti
+synthesis/simulation/modelsim/taylor_sigmoid.mpf
+synthesis/simulation/modelsim/transcript
+synthesis/simulation/modelsim/work/_info
+synthesis/simulation/modelsim/work/_lib.qdb
